[package]
name = "markdown"
version = "0.1.0"
authors = ["Sean Hellum <seanhellum45@gmail.com>"]
edition = "2018"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
pulldown-cmark = { version = "0.5.3", default-features = false }
wasm-bindgen = "=0.2.55"
cli_kit = "0.1.1"
