[package]
name = "markdown_wasi"
version = "0.1.2"
description = "Cross programming language markdown operations with WASI"
authors = ["Sean Hellum <seanhellum45@gmail.com>"]
edition = "2018"
license = "MIT"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
pulldown-cmark = { version = "0.5.3", default-features = false }
wasm-bindgen = "=0.2.55"
html2md = "0.2.9"
